<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/userlogin"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    tools:context=".landing">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/USimageVu"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="105dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/visit_icon" />
        <TextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_greenblue"
            android:padding="8dp"
            android:layout_gravity="center"
            android:text="@string/bookavisita"
            android:textAlignment="center"
            android:textColor="@color/mywhite"
            android:visibility="gone"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/useremailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_inbut_style"
            android:gravity="center_horizontal"

            android:hint="@string/insertemail"
            android:inputType="textEmailAddress"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="center"
            android:textColor="@color/myblack"
            android:textColorHint="@color/Mgray"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.53"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/forgetpassbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/gradient_animation"
                android:enabled="false"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/cantremember"
                android:textAllCaps="false"
                android:textColor="@color/mywhite"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/userpasslET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_weight="3"
                android:background="@drawable/bg_inbut_style"
                android:gravity="center_horizontal"
                android:hint="@string/enterpassword"
                android:inputType="textPassword"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textAlignment="center"
                android:textColor="@color/myblack"
                android:textColorHint="@color/Mgray"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:id="@+id/signupbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/gradient_animation"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/mywhite"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btndemo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/gradient_animation"
                android:padding="5dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/demo"
                android:textAllCaps="false"
                android:textColor="@color/mywhite"
                android:textSize="18sp" />

            <Button
                android:id="@+id/loginbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/gradient_animation"
                android:clickable="true"
                android:enabled="false"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/mywhite"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

        </LinearLayout>

    </LinearLayout>


</LinearLayout>