<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_l_greenblue"
    android:orientation="vertical"
    tools:context=".bookvisit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_l_greenblue"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/setdatecard"
                android:textColor="@color/mywhite"
                android:textSize="25sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/setFdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_btn_main"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/setday"
                    android:textColor="@color/mywhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_l_greenblue"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/firstavilday"
                    android:textColor="@color/myYellow"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/setLdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="2"
                    android:background="@drawable/bg_btn_main"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/setday"
                    android:textColor="@color/mywhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_l_greenblue"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/lastavilday"
                    android:textColor="@color/myYellow"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingTop="30dp"
                android:paddingBottom="15dp">

                <Button
                    android:id="@+id/closeit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_btn_main"
                    android:padding="10dp"
                    android:text="@string/close"
                    android:textColor="@color/mywhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/confirmsettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/bg_btn_main"
                    android:gravity="center_horizontal"
                    android:padding="15dp"
                    android:text="@string/confirmset"
                    android:textColor="@color/mywhite"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>