<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_l_greenblue"
    android:orientation="vertical"
    tools:context=".bookvisit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/bg_l_greenblue"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/stoptimecard"
                android:textColor="@color/myYellow"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/pickthetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_btn_main"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:text="@string/picktime"
                android:textColor="@color/mywhite"
                android:textSize="18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <Button
                    android:id="@+id/closeit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:background="@drawable/bg_btn_main"
                    android:gravity="center_horizontal"
                    android:padding="15dp"
                    android:text="@string/close"
                    android:textColor="@color/mywhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/disabletimenow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="10dp"
                    android:background="@drawable/bg_btn_main"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/diabletimenow"
                    android:textColor="@color/mywhite"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>